--- a/Community_Detection/Community_Detection.cbp
+++ b/Community_Detection/Community_Detection.cbp
@@ -33,8 +33,12 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="include/Graph.h" />
 		<Unit filename="include/Node.h" />
+		<Unit filename="include/SLPA.h" />
+		<Unit filename="src/Graph.cpp" />
 		<Unit filename="src/Node.cpp" />
+		<Unit filename="src/SLPA.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
