--- a/Community_Detection/Community_Detection.cbp
+++ b/Community_Detection/Community_Detection.cbp
@@ -7,23 +7,24 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Community_Detection" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+				<Option output="bin\Debug\Community_Detection" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters='&quot;D:\Padia&apos;s Stuff\Documents\GitHub\CSC591-Project1\graphs\amazon.graph&quot; 100 amazon.output 0.5' />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
-					<Add directory="C:/Users/gaurav/Documents/GitHub/CSC591-Project1/Community_Detection/include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Community_Detection" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+				<Option output="bin\Release\Community_Detection" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,13 +34,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="include/Graph.h" />
-		<Unit filename="include/Node.h" />
-		<Unit filename="include/SLPA.h" />
-		<Unit filename="src/Graph.cpp" />
-		<Unit filename="src/Node.cpp" />
-		<Unit filename="src/SLPA.cpp" />
-		<Unit filename="src/main.cpp" />
+		<Unit filename="include\Graph.h" />
+		<Unit filename="include\Node.h" />
+		<Unit filename="include\SLPA.h" />
+		<Unit filename="src\Graph.cpp" />
+		<Unit filename="src\Node.cpp" />
+		<Unit filename="src\SLPA.cpp" />
+		<Unit filename="src\main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
