another shot at gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Community_Detection/*.cbp
-Community_Detection/*.depend
-Community_Detection/*.layoyt
-Community_Detection/[Bb]in/
-Community_Detection/[Oo]bj/
+/Community_Detection/*.cbp
+/Community_Detection/*.depend
+/Community_Detection/*.layoyt
+/Community_Detection/[Bb]in/
+/Community_Detection/[Oo]bj/
